historique dev complet cote client

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -96,3 +96,7 @@ li.dropdown:hover > .dropdown-menu {
   text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.5);
   transition-duration: 1s;
 }
+
+#tableHistoric1_filter, #tableHistoric2_filter{
+  display: none;
+}
