--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -264,7 +264,7 @@
                 <h3>Avis clients</h3>
             </header>
 
-            <div class="row justify-content-center">
+            <div class="row justify-content-center" style="margin:auto!important;">
                 <div class="col-lg-8">
 
                     <div class="owl-carousel testimonials-carousel wow fadeInUp">
