--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -21,7 +21,7 @@
 				<a class="nav-link" href="#">Live</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="#">Historiques</a>
+				<a class="nav-link" href="{{ path('historic_index') }}">Historique</a>
 			</li>
 			<li class="nav-item">
 				<a class="nav-link" href="{{ path('offers_index') }}">Offres</a>
