--- a/templates/offers/prepare.html.twig
+++ b/templates/offers/prepare.html.twig
@@ -127,60 +127,85 @@
 			invalid: 'invalid',
 		};
 		
-		var cardNumber = elements.create('cardNumber', {
+		var cardNumber = elements.create('card', {
 			style: elementStyles,
 			classes: elementClasses,
 		});
-  		cardNumber.mount('#example2-card-number');
-		cardNumber.addEventListener('change', function (event) {
-			if (event.error) {
-				errors.textContent = event.error.message;
-				form.classList.add('has-error');
+  		card.mount('#card-element');
+		card.addEventListener('change', ({error}) => {
+			const displayError = document.getElementById('card-errors');
+			if (error) {
+				displayError.textContent = error.message;
 			} else {
-				errors.textContent = '';
-				form.classList.remove('has-error');
+				displayError.textContent = '';
 			}
 		});
 
-		var cardExpiry = elements.create('cardExpiry', {
-			style: elementStyles,
-			classes: elementClasses,
-		});
-		cardExpiry.mount('#example2-card-expiry');
-		cardExpiry.addEventListener('change', function (event) {
-			if (event.error) {
-				errors.textContent = event.error.message;
-				form.classList.add('has-error');
-			} else {
-				errors.textContent = '';
-				form.classList.remove('has-error');
-			}
-		});
+		{#var cardExpiry = elements.create('cardExpiry', {#}
+		{#	style: elementStyles,#}
+		{#	classes: elementClasses,#}
+		{#});#}
+		{#cardExpiry.mount('#example2-card-expiry');#}
+		{#cardExpiry.addEventListener('change', function (event) {#}
+		{#	if (event.error) {#}
+		{#		errors.textContent = event.error.message;#}
+		{#		form.classList.add('has-error');#}
+		{#	} else {#}
+		{#		errors.textContent = '';#}
+		{#		form.classList.remove('has-error');#}
+		{#	}#}
+		{#});#}
 
-		var cardCvc = elements.create('cardCvc', {
-			style: elementStyles,
-			classes: elementClasses,
-		});
-		cardCvc.mount('#example2-card-cvc');
-		cardCvc.addEventListener('change', function (event) {
-			if (event.error) {
-				errors.textContent = event.error.message;
-				form.classList.add('has-error');
-			} else {
-				errors.textContent = '';
-				form.classList.remove('has-error');
-			}
-		});
+		{#var cardCvc = elements.create('cardCvc', {#}
+		{#	style: elementStyles,#}
+		{#	classes: elementClasses,#}
+		{#});#}
+		{#cardCvc.mount('#example2-card-cvc');#}
+		{#cardCvc.addEventListener('change', function (event) {#}
+		{#	if (event.error) {#}
+		{#		errors.textContent = event.error.message;#}
+		{#		form.classList.add('has-error');#}
+		{#	} else {#}
+		{#		errors.textContent = '';#}
+		{#		form.classList.remove('has-error');#}
+		{#	}#}
+		{#});#}
 		
-		form.addEventListener('submit', function (event) {
-			event.preventDefault();
-			stripe.createToken(cardNumber).then(function (result) {
+		{#form.addEventListener('submit', function (event) {#}
+		{#	event.preventDefault();#}
+		{#	stripe.createToken(cardNumber).then(function (result) {#}
+		{#		if (result.error) {#}
+		{#			errors.textContent = result.error.message;#}
+		{#			form.classList.add('has-error');#}
+		{#		} else {#}
+		{#			document.getElementById('{{ form.children.token.vars.id }}').setAttribute('value', result.token.id);#}
+		{#			form.submit();#}
+		{#		}#}
+		{#	});#}
+		{#});#}
+
+		form.addEventListener('submit', function(ev) {
+			ev.preventDefault();
+			stripe.confirmCardPayment(clientSecret, {
+				payment_method: {
+					card: card,
+					billing_details: {
+						name: 'Jenny Rosen'
+					}
+				}
+			}).then(function(result) {
 				if (result.error) {
-					errors.textContent = result.error.message;
-					form.classList.add('has-error');
+					// Show error to your customer (e.g., insufficient funds)
+					console.log(result.error.message);
 				} else {
-					document.getElementById('{{ form.children.token.vars.id }}').setAttribute('value', result.token.id);
-					form.submit();
+					// The payment has been processed!
+					if (result.paymentIntent.status === 'succeeded') {
+						// Show a success message to your customer
+						// There's a risk of the customer closing the window before callback
+						// execution. Set up a webhook or plugin to listen for the
+						// payment_intent.succeeded event that handles any business critical
+						// post-payment actions.
+					}
 				}
 			});
 		});
