--- a/public/css/app.css
+++ b/public/css/app.css
@@ -100,3 +100,15 @@ li.dropdown:hover > .dropdown-menu {
 #tableHistoric1_filter, #tableHistoric2_filter{
   display: none;
 }
+
+.bg-post-admin{
+  background-color: #bce0f3;
+}
+
+#post_media > fieldset{
+  margin: 0!important;
+}
+
+#form_response fieldset{
+  margin: 0!important;
+}
