--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css" integrity="sha384-REHJTs1r2ErKBuJB0fCK99gCYsVjwxHrSU0N7I1zl9vZbggVJXRMsv/sLlOAGb4M" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/admin/adminlte.min.css">
+    <link rel="stylesheet" href="/css/app.css">
     {% block stylesheets %}{% endblock %}
 </head>
 <body>
@@ -24,6 +25,8 @@
 <script src="/js/admin/adminlte.min.js"></script>
 <script>
     $(document).ready(function () {
+        $('[data-toggle="tooltip"]').tooltip();
+
         var url = window.location;
 
         $('ul.nav-sidebar a').filter(function() {
