--- a/templates/admin/historic/index.html.twig
+++ b/templates/admin/historic/index.html.twig
@@ -18,7 +18,7 @@
                     </div>
                     <div class="col-sm-6">
                         <ol class="breadcrumb float-sm-right">
-                            <li class="breadcrumb-item"><a href="#">Accueil</a></li>
+                            <li class="breadcrumb-item"><a href="{{ path('admin_dashboard') }}">Accueil</a></li>
                             <li class="breadcrumb-item active">Historique</li>
                         </ol>
                     </div>
