--- a/templates/admin/partials/header.html.twig
+++ b/templates/admin/partials/header.html.twig
@@ -8,3 +8,12 @@
         </li>
     </ul>
 </nav>
+{% for label, messages in app.flashes %}
+    <div class="container">
+        <div class="alert alert-{{ label }}">
+            {% for message in messages %}
+                <p>{{ message | raw }}</p>
+            {% endfor %}
+        </div>
+    </div>
+{% endfor %}
