--- a/templates/admin/partials/sidebar.html.twig
+++ b/templates/admin/partials/sidebar.html.twig
@@ -28,15 +28,15 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="{{ path('homepage') }}" class="nav-link">
-                        <i class="nav-icon fas fa-shopping-cart"></i>
+                    <a href="{{ path('admin_offer') }}" class="nav-link">
+                        <i class="nav-icon fas fa-book"></i>
                         <p>
                             Offres
                         </p>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="{{ path('homepage') }}" class="nav-link">
+                    <a href="{{ path('admin_user') }}" class="nav-link">
                         <i class="nav-icon fas fa-users"></i>
                         <p>
                             Utilisateurs
@@ -53,9 +53,9 @@
                 </li>
                 <li class="nav-item">
                     <a href="{{ path('homepage') }}" class="nav-link">
-                        <i class="nav-icon fas fa-comments"></i>
+                        <i class="nav-icon fas fa-shopping-cart"></i>
                         <p>
-                            Forums
+                            Paiements
                         </p>
                     </a>
                 </li>
